syntax = "proto3";

option java_multiple_files = true;
option java_package = "in.myfamly.learn.quarkus.grpc";

package hello;

service CalculatorApi {
  rpc add (AddRequest) returns (AddResponse) {}
}

message AddRequest {
  int64 number1 = 1;
  int64 number2= 2;
}

message AddResponse {
  int64 sum = 1;
}
